# amra

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dat/: .gitignore  culdesac.map  culdesac_costs.map  culdesac_np_bottom_costs.map  culdesac_np_large.map  culdesac_np_left_costs.map  culdesac_np_right_costs.map  culdesac_with_np.map  mprimlog.txt  multiple_passages.map  uav_obs.map  uav_obs_rand.map  uavexps.py  uavexps.txt  uavsol.txt  uavtest.map
dat/culdesacs/: culdesac_np_bottom_costs.map  culdesac_np_left.map  culdesac_np_left_costs.map  culdesac_np_right.map
dat/mprim/: mhi_3m_9m.mprim
include/amra/: CostConvergenceTerminationCondition.h  amra.hpp  arastar.hpp  constants.hpp  dijkstra.hpp  dubins.hpp  environment.hpp  grid2d.hpp  griduav.hpp  helpers.hpp  heuristic.hpp  movingai.hpp  types.hpp  uav_env.hpp  wastar.hpp
include/smpl/: angles.h  spatial.h  time.h  types.h
include/smpl/console/: ansi.h  console.h  nonstd.h
include/smpl/console/detail/: ansi.hpp  console_ros.h  console_std.h
include/smpl/heap/: intrusive_heap.h
include/smpl/heap/detail/: intrusive_heap.hpp
include/smpl/unicycle/: dubins.h  pose_2d.h  unicycle.h
scripts/: culdesac.py  culdesac_costmap.py  culdesac_np_large.py  culdesac_with_np.py  mapgen.py  multiple_passages.py  plot_uav_sol.py  plot_uav_solve.py  plotsolve.py  random_obs.py  uavtest.py
src/: amra.cpp  arastar.cpp  constants.cpp  dijkstra.cpp  dubins.cpp  environment.cpp  grid2d.cpp  heuristic.cpp  movingai.cpp  uav_env.cpp  wastar.cpp
src/amra/: CostConvergenceTerminationCondition.cpp  amra.cpp  arastar.cpp  constants.cpp  dijkstra.cpp  dubins.cpp  grid2d.cpp  griduav.cpp  movingai.cpp
src/smpl/console/: ansi.cpp  console.cpp
src/smpl/unicycle/: dubins.cpp  unicycle.cpp
test/: ompl_run.cpp  run2d.cpp  run_uav.cpp  runset.cpp  runuav.cpp
